Cleanup loot modifiers